--- a/css/header.css
+++ b/css/header.css
@@ -1,11 +1,8 @@
 :root {
-    --ms-header-height: 5.625rem;
+    --ms-header-height: 4.375rem;
 }
 
 
-.debug header {
-    background-color: aqua;
-}
 
 /******* /DEBUG *******/
 
@@ -13,9 +10,28 @@
 
 header {
     height: var(--ms-header-height);
+    padding-top: 10px;
+    padding-bottom: 10px;
+    background-color: #f8f9fa;
 }
 
+.navbar-brand > img {
+    width: 100%;
+    max-height: 50px;
+}
 
+.-ms-search-style > .input-group > * {
+    background-color: #e5e5e5;
+}
+
+.-ms-search-style > .input-group > .form-control:focus {
+    box-shadow: none;
+    border: 1px solid #ced4da;
+}
+
+.-ms-top-right-menu-style > li:last-child i {
+    color: #ff8f00;
+}
 
 
 
