--- a/css/header.css
+++ b/css/header.css
@@ -15,11 +15,15 @@ header {
     background-color: #f8f9fa;
 }
 
+
+/*** Logo ***/
 .navbar-brand > img {
     width: 100%;
     max-height: 50px;
 }
 
+
+/*** Search bar ***/
 .-ms-search-style > .input-group > * {
     background-color: #e5e5e5;
 }
@@ -29,6 +33,8 @@ header {
     border: 1px solid #ced4da;
 }
 
+
+/*** Icon menù ***/
 .-ms-top-right-menu-style > li:last-child i {
     color: #ff8f00;
 }
