--- a/css/main-content.css
+++ b/css/main-content.css
@@ -1,10 +1,3 @@
-/******* DEBUG *******/
-.debug #main-content {
-    background-color: blueviolet;
-}
-
-/******* /DEBUG *******/
-
 #main-content {
     overflow-y: auto;
     flex: 1 1 0%;
@@ -14,4 +7,21 @@
 /*** Top functional section ***/
 #functional-header {
     background-color: #1B72E8;
+    color: #fff;
+}
+
+
+/*** Badge list ***/
+#functional-header .-ms-badge-color {
+    background-color: #165bba;
+}
+
+#badge-list > ul li {
+    margin-right: .375rem;
+}
+
+
+/*** Online now ***/
+#online-now > div:last-child {
+    font-size: 2rem;
 }
